--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">XFly</string>
+    <string name="app_name">xFly</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_splash">XFly</string>
-    <string name="mBtnIn">GotEnjoy</string>
-    <string name="dummy_content">X-Fly</string>
+    <string name="title_activity_splash">xFly</string>
+    <string name="mBtnIn">Go</string>
+    <string name="dummy_content">xFly</string>
 </resources>
